# bliss-playlist-optimizer

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-arm64.yml  ci.yml
docs/: ERROR_CODES.md
examples/: progress-event.json  reorder-only-request.json  semantic-evidence-empty.json  success-result.json
fixtures/synthetic/: README.md  adaptive-scoring-request.json  automatic-bridge-request.json  automatic-preview-request.json  bliss.db  exact-count-infeasible-request.json  exact-count-request.json  expected-native-automatic-preview-v1.json  expected-native-bridge-analysis-v1.json  expected-native-exact-count-infeasible-v1.json  expected-native-exact-count-v1.json  expected-native-preserve-automatic-v1.json  expected-native-preserve-endpoint-slots-v1.json  expected-native-preserve-exact-count-v1.json  expected-native-preserve-multi-track-gap-v1.json  expected-native-route-v1.json  expected-native-scoring-v1.json  expected-native-semantic-bridge-analysis-v1.json  expected-python-oracle-v1.json  generate_fixture.py  learned_matrix.json  manifest.json  preserve-automatic-request.json  source.m3u  (+6 more)
schemas/: bridge-analysis-artifact-v1.schema.json  optimizer-request-v1.schema.json  optimizer-result-v1.schema.json  progress-event-v1.schema.json  route-artifact-v1.schema.json  scoring-artifact-v1.schema.json  semantic-evidence-v1.schema.json
src/: bridge.rs  contextual.rs  lib.rs  main.rs  preview.rs  route.rs  semantic.rs
tests/: contracts.rs
