[package]
name = "bliss-playlist-optimizer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Deterministic playlist optimization built on bliss similarity"
repository = "https://github.com/chrober/bliss-playlist-optimizer"
publish = false

[dependencies]
bliss-mixer-core = { git = "https://github.com/chrober/bliss-mixer-core.git", rev = "3297d83213c831daef84dc93aa9f2c8ec866f457" }
jsonschema = { version = "0.33", default-features = false }
rayon = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
